Remove horizontal scrolling bug

--- a/assets/scss/_eoy.scss
+++ b/assets/scss/_eoy.scss
@@ -19,6 +19,7 @@
 .banner {
   background-color: #000000;
   z-index: 100000000000000 !important;
+  overflow-x: hidden;
 }
 
 .footer__close {
